--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
     <div id="content">
     </div>
     <audio id="notify" src="/client/mp3/double.mp3"></audio>
+    <audio id="timeout" src="/client/mp3/timeout.mp3"></audio>
     <script src="/client/dist/main.js" type="text/javascript"></script>
   </body>
 </html>
